# zippy-zip

./: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: CI.yml
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
