[package]
edition = "2021"
name = "business-goose_zippy-zip"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.0.3", default-features = false, features = ["napi4"] }
napi-derive = "2.0.7"
zip = "0.5"
walkdir = "2"
futures = "0.3.19"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
